--- a/React Projects/securegenic/src/Pages/Utilities/Utilities.scss
+++ b/React Projects/securegenic/src/Pages/Utilities/Utilities.scss
@@ -3,3 +3,23 @@
     background-color: rgb(246, 249, 252);
     padding: 0rem 2rem;
 }
+.u_card{
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 1rem;
+    border: 2px solid black;
+    background-color: white;
+    
+     .position{
+        font-weight: bold;
+        position: absolute;
+        top: 45px;
+        left: 40px;
+     }
+}
+.flex_card{
+    display: flex;
+    gap: 1rem;
+}
