--- a/React Projects/securegenic/src/Pages/DashBoard/Dashboard.scss
+++ b/React Projects/securegenic/src/Pages/DashBoard/Dashboard.scss
@@ -5,6 +5,7 @@
 }
 .dashboard{
     padding: 0rem 0.9rem;
+    width: -webkit-fill-available;
 }
 .card{
     width: 15rem;
@@ -15,6 +16,7 @@
 }
 .d_cards{
     display: flex;
+    flex-wrap: wrap;
     gap: 1.6rem;
 }
 
