--- a/React Projects/securegenic/src/Pages/Reports/Reports.scss
+++ b/React Projects/securegenic/src/Pages/Reports/Reports.scss
@@ -2,15 +2,15 @@
     width: 100%;
     height: 100vh;
     background-color: rgb(246, 249, 252);
-    padding: 0rem 2rem;
+    padding: 0rem .9rem;
 }
 .report_cards{
     display: flex;
     gap: 1rem;
 }
 .r-card{
-    width: 28%;
-    padding: 13px;
+    width: 33%;
+    padding: 12px 15px;
     background: #fff;
     display: flex;
     align-items: center;
@@ -26,8 +26,8 @@
 }
 .r_icon{
     position: absolute;
-    top: 18px;
-    right: 17px;
+    top: 14px;
+    right: 14px;
     font-size: 1.25rem;
     color: #B5B5C3;
 }
